--- a/scss/cssclasses/_list-reversed.scss
+++ b/scss/cssclasses/_list-reversed.scss
@@ -1,5 +1,6 @@
 @for $n from 1 through 10 {
-    .list-reversed-#{$n} :is(.el-ul, .el-ol) {
+    .list-reversed-#{$n} :is(.el-ul, .el-ol),
+    .list-reversed-#{$n} > * {
         $sel: "";
         @if $n > 1 {
             @for $i from 0 to $n - 1 {
@@ -8,7 +9,7 @@
         }
         #{$sel} > :is(ul, ol) {
             transform: scaleY(-1);
-    
+
             > li {
                 transform: scaleY(-1);
             }
@@ -16,9 +17,12 @@
     }
 }
 
-
-.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol) {
-    &, ul, ol, li {
+.list-reversed-all :is(.el-ul, .el-ol) > :is(ul, ol),
+.list-reversed-all .markdown-preview-view > * > :is(ul, ol) {
+    &,
+    ul,
+    ol,
+    li {
         transform: scaleY(-1);
     }
 }
