--- a/scss/editor/embeds/_embeds.scss
+++ b/scss/editor/embeds/_embeds.scss
@@ -2,6 +2,7 @@
 @use "embed-background-image";
 //@use "embed-faded";
 @use "embed-full-width-image";
+@use "embed-no-style";
 @use "embed-pdfs";
 @use "embed-wide";
 @use "embeds-mod-empty";
