--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -47,6 +47,7 @@ body {
 
 .markdown-preview-view.banner {
     --inline-title-margin-bottom: 0;
+    --page-title-color: var(--text-normal);
 
     isolation: isolate;
 
@@ -56,7 +57,8 @@ body {
         @include image-banner;
     }
 
-    .inline-title {
+    .inline-title,
+    .page-header {
         position: absolute;
         top: var(--file-margins-block);
         left: var(--file-margins-inline);
@@ -93,8 +95,8 @@ body {
 }
 
 // Properties hidden
-.markdown-preview-view:not(.show-properties).banner .mod-header,
-.markdown-preview-view.hide-properties.banner .mod-header {
+.markdown-preview-view:not(.show-properties).banner > * > .mod-header,
+.markdown-preview-view.hide-properties.banner > * > .mod-header {
     height: calc(var(--banner-height) - var(--file-margins-block));
     padding-bottom: var(--file-margins-block);
 }
@@ -125,7 +127,8 @@ body {
 .markdown-preview-view.banner.banner-title {
     --inline-title-line-height: 3;
 
-    .inline-title {
+    .inline-title,
+    .page-header {
         position: absolute;
         top: calc(var(--banner-height) * 0.5);
         right: 50%;
@@ -170,7 +173,8 @@ body {
         @include image-banner-slope;
     }
 
-    .inline-title {
+    .inline-title,
+    .page-header {
         position: absolute;
         transform: rotate(calc(-1 * var(--banner-slope-angle)));
         transform-origin: bottom left;
@@ -182,7 +186,7 @@ body {
 }
 
 @supports (top: anchor(--anchor-preview-section top)) and (right: anchor(--anchor-preview-section right)) {
-    .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
+    .markdown-preview-view.banner:is(.banner-slant, .banner-slope) :is(.inline-title, .page-header) {
         top: calc(
             anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) -
                 1em - var(--banner-title-shadow-size)
