--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -1,7 +1,7 @@
-@forward '../shared/paper-texture';
-@forward '../shared/workleaves';
-@forward '../shared/markdown-container';
-@forward '../shared/file-margins';
+@forward "../shared/paper-texture";
+@forward "../shared/workleaves";
+@forward "../shared/markdown-container";
+@forward "../shared/file-margins";
 
 .newspaper {
     background-color: var(--workleaves-background);
@@ -11,11 +11,13 @@
 }
 
 .newspaper {
-    --inline-title-font: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+    --inline-title-font: "Playfair Display", Georgia, "Times New Roman", Times, serif;
+    --page-title-font: "Playfair Display", Georgia, "Times New Roman", Times, serif;
     --inline-title-padding-top: var(--inline-title-margin-bottom);
+
     --bold-modifier: 500;
-    --font-text: Spectral, 'Times New Roman', Times, serif;
-    --h1-font: 'Times New Roman', Times, serif;
+    --font-text: Spectral, "Times New Roman", Times, serif;
+    --h1-font: "Times New Roman", Times, serif;
     --h1-color: var(--text-normal);
     --h1-background: transparent;
     --h1-style: italic;
@@ -39,11 +41,11 @@
     inset-inline-start: -22px;
 }
 
-.newspaper .inline-title {
+.newspaper :is(.inline-title, .page-header) {
     text-align: center;
 }
 
-.newspaper .inline-title::after {
+.newspaper :is(.inline-title, .page-header)::after {
     content: "";
     display: block;
     padding-top: var(--inline-title-padding-top);
