--- a/scss/editor/callouts/_callout-page-break.scss
+++ b/scss/editor/callouts/_callout-page-break.scss
@@ -32,13 +32,13 @@ body {
     border-inline: none;
     display: flex;
 
-    >.callout-title {
+    > .callout-title {
         background: none;
         border: none;
         align-items: center;
     }
 
-    >.callout-content {
+    > .callout-content {
         border: none;
         flex-grow: 1;
 
@@ -52,8 +52,8 @@ body {
         }
     }
 
-    >*>.callout-icon,
-    >*>.callout-title-inner {
+    > * > .callout-icon,
+    > * > .callout-title-inner {
         display: none;
     }
 }
@@ -66,7 +66,7 @@ body {
     @include wide.wide(1);
 }
 
-.callout:not([data-callout="page-break"])>.callout-content>.callout[data-callout="page-break"] {
+.callout:not([data-callout="page-break"]) > .callout-content > .callout[data-callout="page-break"] {
     width: calc(100% + var(--size-4-6) + var(--size-4-3));
     margin-left: calc(-1 * var(--size-4-6));
     margin-right: calc(-1 * var(--size-4-3));
@@ -81,15 +81,21 @@ body {
     }
 }
 
-:where(.fas-callout-infobox) .callout[data-callout="infobox"]>.callout-content>.callout[data-callout="page-break"],
-.callout[data-callout="fas-infobox"]>.callout-content>.callout[data-callout="page-break"] {
+.callout[data-callout="fas-infobox"] > .callout-content > .callout[data-callout="page-break"] {
     width: calc(100% + 2 * var(--callout-border-width, 0px));
     margin-left: calc(-1 * var(--callout-border-width, 0px));
     margin-right: calc(-1 * var(--callout-border-width, 0px));
-
 }
 
-.callout.callout[data-callout="pinned"]>.callout-content>.callout[data-callout="page-break"] {
+@container style(--fas-callout-infobox) {
+    .callout[data-callout="infobox"] > .callout-content > .callout[data-callout="page-break"] {
+        width: calc(100% + 2 * var(--callout-border-width, 0px));
+        margin-left: calc(-1 * var(--callout-border-width, 0px));
+        margin-right: calc(-1 * var(--callout-border-width, 0px));
+    }
+}
+
+.callout.callout[data-callout="pinned"] > .callout-content > .callout[data-callout="page-break"] {
     border-radius: 0;
     width: calc(100% + var(--size-4-6) + 3 * var(--size-4-3));
 
@@ -97,33 +103,32 @@ body {
     margin-right: calc(-2 * var(--size-4-3));
 }
 
-.callout.callout[data-callout="autopsy"]>.callout-content>.callout[data-callout="page-break"] {
+.callout.callout[data-callout="autopsy"] > .callout-content > .callout[data-callout="page-break"] {
     --callout-padding: 0;
     grid-column: 1 / -1;
 }
 
 .callout:not([data-callout="page-break"]) {
-    &[data-callout="letter"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout="letter"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-yellow-rgb);
     }
 
-    &[data-callout="autopsy"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout="autopsy"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--mono-rgb-0);
     }
 
-    &[data-callout="quote"]>.callout-content>.callout[data-callout="page-break"],
-    &[data-callout="cite"]>.callout-content>.callout[data-callout="page-break"],
-    &[data-callout="fas-quote"]>.callout-content>.callout[data-callout="page-break"],
-    &[data-callout="fas-cite"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout="quote"] > .callout-content > .callout[data-callout="page-break"],
+    &[data-callout="cite"] > .callout-content > .callout[data-callout="page-break"],
+    &[data-callout="fas-quote"] > .callout-content > .callout[data-callout="page-break"],
+    &[data-callout="fas-cite"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--callout-quote);
     }
 
-    &[data-callout="profile"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout="profile"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-gray-rgb);
     }
 
-    &[data-callout="screen"]>.callout-content>.callout[data-callout="page-break"] {
-
+    &[data-callout="screen"] > .callout-content > .callout[data-callout="page-break"] {
         &:is(.theme-light *) {
             --callout-color: var(--callout-screen-color-light-rgb);
         }
@@ -133,59 +138,59 @@ body {
         }
     }
 
-    &[data-callout-metadata~="gray"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="gray"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-gray-rgb);
     }
 
-    &[data-callout-metadata~="brown"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="brown"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-brown-rgb);
     }
 
-    &[data-callout-metadata~="red"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="red"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-red-rgb);
     }
 
-    &[data-callout-metadata~="orange"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="orange"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-orange-rgb);
     }
 
-    &[data-callout-metadata~="yellow"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="yellow"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-yellow-rgb);
     }
 
-    &[data-callout-metadata~="green"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="green"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-green-rgb);
     }
 
-    &[data-callout-metadata~="cyan"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="cyan"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-cyan-rgb);
     }
 
-    &[data-callout-metadata~="blue"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="blue"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-blue-rgb);
     }
 
-    &[data-callout-metadata~="cyan"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="cyan"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-cyan-rgb);
     }
 
-    &[data-callout-metadata~="purple"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="purple"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-purple-rgb);
     }
 
-    &[data-callout-metadata~="pink"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="pink"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: var(--color-pink-rgb);
     }
 
-    &[data-callout-metadata~="black"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="black"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: 0, 0, 0;
     }
 
-    &[data-callout-metadata~="white"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="white"] > .callout-content > .callout[data-callout="page-break"] {
         --callout-color: 255, 255, 255;
     }
 
-    &[data-callout-metadata~="accent"]>.callout-content>.callout[data-callout="page-break"] {
+    &[data-callout-metadata~="accent"] > .callout-content > .callout[data-callout="page-break"] {
         border-block-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l) / var(--callout-border-opacity));
     }
 }
